[gd_scene load_steps=10 format=2]

[ext_resource path="res://image/mainmenu2.png" type="Texture" id=1]
[ext_resource path="res://font/Slugterra.otf" type="DynamicFontData" id=2]
[ext_resource path="res://script/easy.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.184314, 0.156863, 0.588235, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.184314, 0.156863, 0.588235, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.0627451, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.188235, 0.152941, 0.592157, 1 )

[node name="Node2D" type="Node2D"]

[node name="Mainmenu2" type="Sprite" parent="."]
position = Vector2( 641.5, 367.5 )
scale = Vector2( 0.669271, 0.684259 )
texture = ExtResource( 1 )

[node name="easy" type="Button" parent="."]
margin_left = 322.0
margin_top = 363.0
margin_right = 475.0
margin_bottom = 408.0
rect_pivot_offset = Vector2( 113, 23 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "easy"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medium" type="Button" parent="."]
margin_left = 547.0
margin_top = 361.0
margin_right = 701.0
margin_bottom = 406.0
rect_pivot_offset = Vector2( 113, 23 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hard" type="Button" parent="."]
margin_left = 766.0
margin_top = 362.0
margin_right = 919.0
margin_bottom = 408.0
rect_pivot_offset = Vector2( 113, 23 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 44.0
margin_top = 660.0
margin_right = 191.0
margin_bottom = 705.0
rect_pivot_offset = Vector2( 74, 23 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guide" type="Button" parent="."]
margin_left = 1075.0
margin_top = 661.0
margin_right = 1222.0
margin_bottom = 706.0
rect_pivot_offset = Vector2( 74, 23 )
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "GUIDE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="easy" to="easy" method="_on_easy_pressed"]
[connection signal="pressed" from="medium" to="easy" method="_on_medium_pressed"]
[connection signal="pressed" from="hard" to="easy" method="_on_hard_pressed"]
[connection signal="pressed" from="back" to="easy" method="_on_back_pressed"]
[connection signal="pressed" from="guide" to="easy" method="_on_guide_pressed"]
